# js-framework-benchmark

frameworks/non-keyed/incr_dom/: esy.json  package.json
frameworks/non-keyed/incr_dom/esy.lock/: index.json
frameworks/non-keyed/incr_dom/src/: App.re  Elements.re  Entrypoint.re  Row.re  Util.re  dune
