(executable
   (package js-framework-benchmark)
   (name Entrypoint)
   (public_name JsFrameworkBenchmark)
   (preprocess (pps ppx_jane ))
   (libraries  incr_dom incr_dom_partial_render console.lib )
   (js_of_ocaml (flags
      ; --pretty
      --opt 3
      --no-source-map
   ))
)

(install
   (section bin)
   (package js-framework-benchmark)
   (files Entrypoint.bc.js)
   )
