(executable
   (package js-framework-benchmark)
   (name Entrypoint)
   (public_name JsFrameworkBenchmark)
   (preprocess (pps ppx_jane ))
   (libraries  incr_dom )
   (js_of_ocaml (flags
      ; --pretty
      --opt 3
      ; --source-map
   ))
   ; (ocamlopt_flags -g)
)

(install
   (section bin)
   (package js-framework-benchmark)
   (files Entrypoint.bc.js)
   )
